More suggestions from intellij